--- a/components/ListHeader/index.module.css
+++ b/components/ListHeader/index.module.css
@@ -1,7 +1,7 @@
 .container {
   color: #dc1ff1;
   width: 100%;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
   box-sizing: border-box;
   font-weight: bold;
   background-color: #1a2734;
